# quota-float-Pro

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
docs/: GITHUB-RELEASE-CHECKLIST.md  RELEASE.md
scripts/: release-quick.mjs
src/: App.tsx  SettingsApp.tsx  StatusBarApp.tsx  main.tsx  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: codex.rs  lib.rs  models.rs
src/components/: DesignPlayground.tsx  QuotaCard.test.tsx  QuotaCard.tsx  WidgetSettingsPanel.tsx
src/lib/: appUpdate.ts  bridge.test.ts  bridge.ts  i18n.ts  snapshots.test.ts  snapshots.ts
